[gd_scene load_steps=19 format=3 uid="uid://dshhmfgh511v7"]

[ext_resource type="Script" path="res://scripts/character_enemy_skeleton_flipped.gd" id="1_ka67x"]
[ext_resource type="Texture2D" uid="uid://cswsnivmvud5m" path="res://assets/images/skeleton_reversed/arm-back-bottom.svg" id="2_mxnoy"]
[ext_resource type="Texture2D" uid="uid://4s2xpnna8iw4" path="res://assets/images/skeleton_reversed/arm-back-top.svg" id="3_tt3yf"]
[ext_resource type="Texture2D" uid="uid://xfe1he2aw3kc" path="res://assets/images/skeleton_reversed/hand-back.svg" id="4_pofe7"]
[ext_resource type="Texture2D" uid="uid://2ygtgeu0i6ok" path="res://assets/images/skeleton_reversed/leg-back-top.svg" id="5_4mo33"]
[ext_resource type="Texture2D" uid="uid://q05ili4yrj7q" path="res://assets/images/skeleton_reversed/foot-back.svg" id="6_qqft8"]
[ext_resource type="Texture2D" uid="uid://du4ynyfxsbyk6" path="res://assets/images/skeleton_reversed/leg-back-bottom.svg" id="7_0qmvh"]
[ext_resource type="Texture2D" uid="uid://xaeonoml7cra" path="res://assets/images/skeleton_reversed/body.svg" id="8_o57fn"]
[ext_resource type="Texture2D" uid="uid://ckvx1xbu62bug" path="res://assets/images/skeleton_reversed/arm-front-bottom.svg" id="9_22ur5"]
[ext_resource type="Texture2D" uid="uid://b7jp4orxnis" path="res://assets/images/skeleton_reversed/arm-front-top.svg" id="10_fx6fn"]
[ext_resource type="Texture2D" uid="uid://j7mgq6gj4mq6" path="res://assets/images/skeleton_reversed/hand-front.svg" id="11_4xb30"]
[ext_resource type="Texture2D" uid="uid://bd1ao4281jwi4" path="res://assets/images/skeleton_reversed/head.svg" id="12_u45v0"]
[ext_resource type="Texture2D" uid="uid://ck87e2ey2xmel" path="res://assets/images/skeleton_reversed/mouth.svg" id="13_f3asn"]
[ext_resource type="Texture2D" uid="uid://c2lg5cs4ora6f" path="res://assets/images/skeleton_reversed/leg-front-top.svg" id="14_rp285"]
[ext_resource type="Texture2D" uid="uid://cwd68i0qgxeh0" path="res://assets/images/skeleton_reversed/leg-front-bottom.svg" id="15_t4jkq"]
[ext_resource type="Texture2D" uid="uid://ckl5wuogb8yfd" path="res://assets/images/skeleton_reversed/foot-front.svg" id="16_65olb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sqdbg"]
radius = 21.0
height = 162.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lswtt"]
radius = 22.0
height = 164.0

[node name="CharacterEnemySkeletonFlipped" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 20
script = ExtResource("1_ka67x")

[node name="PartsFliped" type="Node2D" parent="."]

[node name="Arm-back-bottom" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-46, 4)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_mxnoy")
flip_h = true

[node name="Arm-back-top" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-18, 6)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_tt3yf")
flip_h = true

[node name="Hand-back" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-72, -8)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_pofe7")

[node name="Leg-back-top" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-18, 81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_4mo33")
flip_h = true

[node name="Foot-back" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-29, 99)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_qqft8")
flip_h = true

[node name="Leg-back-bottom" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-22, 85)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_0qmvh")
flip_h = true

[node name="Body" type="Sprite2D" parent="PartsFliped"]
position = Vector2(0.750004, 21)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_o57fn")
flip_h = true

[node name="Arm-front-bottom" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-46, 15)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_22ur5")
flip_h = true

[node name="Arm-front-top" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-18, 12)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_fx6fn")
flip_h = true

[node name="Hand-front" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-73, 13)
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_4xb30")

[node name="Head" type="Sprite2D" parent="PartsFliped"]
position = Vector2(2, -35)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_u45v0")
flip_h = true

[node name="Mouth" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-8.05, -21.25)
scale = Vector2(0.1, 0.1)
texture = ExtResource("13_f3asn")
flip_h = true

[node name="Leg-front-top" type="Sprite2D" parent="PartsFliped"]
position = Vector2(2.75, 77)
scale = Vector2(0.1, 0.1)
texture = ExtResource("14_rp285")
flip_h = true

[node name="Leg-front-bottom" type="Sprite2D" parent="PartsFliped"]
position = Vector2(2.75, 98)
scale = Vector2(0.1, 0.1)
texture = ExtResource("15_t4jkq")
flip_h = true

[node name="Foot-front" type="Sprite2D" parent="PartsFliped"]
position = Vector2(-3.8147e-06, 118)
scale = Vector2(0.1, 0.1)
texture = ExtResource("16_65olb")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 23)
shape = SubResource("CapsuleShape2D_sqdbg")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 24)
shape = SubResource("CapsuleShape2D_lswtt")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-65, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="TimerHitCooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TimerHitCooldown" to="." method="_on_timer_hit_cooldown_timeout"]
